--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
                             <span class="text-xs bg-secondary bg-opacity-10 text-secondary px-2 py-1 rounded">Signal Protocol</span>
                         </div>
                         <div class="flex justify-between">
-                            <a href="#" class="text-secondary flex items-center gap-1 hover:text-white transition-colors">
+                            <a href="https://github.com/Izumitempest" class="text-secondary flex items-center gap-1 hover:text-white transition-colors">
                                 <div class="w-5 h-5 flex items-center justify-center">
                                     <i class="ri-github-fill"></i>
                                 </div>
@@ -855,16 +855,16 @@
                     
                     <h3 class="text-2xl font-bold mb-6 text-white">Connect</h3>
                     <div class="flex gap-4">
-                        <a href="#" class="w-10 h-10 flex items-center justify-center text-white bg-[#0A0A0A] border border-gray-800 rounded-full hover:border-primary hover:text-primary transition-colors">
+                        <a href="https://github.com/Izumitempest" class="w-10 h-10 flex items-center justify-center text-white bg-[#0A0A0A] border border-gray-800 rounded-full hover:border-primary hover:text-primary transition-colors">
                             <i class="ri-github-fill"></i>
                         </a>
-                        <a href="#" class="w-10 h-10 flex items-center justify-center text-white bg-[#0A0A0A] border border-gray-800 rounded-full hover:border-primary hover:text-primary transition-colors">
+                        <a href="https://linkedin.com/izumitempest" class="w-10 h-10 flex items-center justify-center text-white bg-[#0A0A0A] border border-gray-800 rounded-full hover:border-primary hover:text-primary transition-colors">
                             <i class="ri-linkedin-fill"></i>
                         </a>
                         <a href="#" class="w-10 h-10 flex items-center justify-center text-white bg-[#0A0A0A] border border-gray-800 rounded-full hover:border-primary hover:text-primary transition-colors">
                             <i class="ri-twitter-x-fill"></i>
                         </a>
-                        <a href="#" class="w-10 h-10 flex items-center justify-center text-white bg-[#0A0A0A] border border-gray-800 rounded-full hover:border-primary hover:text-primary transition-colors">
+                        <a href="https://discord.com" class="w-10 h-10 flex items-center justify-center text-white bg-[#0A0A0A] border border-gray-800 rounded-full hover:border-primary hover:text-primary transition-colors">
                             <i class="ri-discord-fill"></i>
                         </a>
                     </div>
@@ -907,7 +907,7 @@
         <div class="container mx-auto px-4">
             <div class="flex flex-col md:flex-row justify-between items-center mb-8">
                 <div class="text-primary text-2xl font-['Pacifico'] mb-4 md:mb-0">
-                    <span class="neon-text">Neo</span>
+                    <span class="neon-text">Izumi</span>
                 </div>
                 <div class="flex flex-wrap justify-center gap-6">
                     <a href="#" class="text-gray-400 hover:text-primary transition-colors">Home</a>
@@ -921,7 +921,7 @@
             <hr class="border-gray-800 mb-8">
             
             <div class="flex flex-col md:flex-row justify-between items-center">
-                <p class="text-gray-400 text-sm mb-4 md:mb-0">&copy; 2025 Alex Cipher. All rights reserved.</p>
+                <p class="text-gray-400 text-sm mb-4 md:mb-0">&copy; 2025 Izumi Hollow. All rights reserved.</p>
                 <div class="flex gap-4">
                     <a href="#" class="text-gray-400 hover:text-primary transition-colors text-sm">Privacy Policy</a>
                     <a href="#" class="text-gray-400 hover:text-primary transition-colors text-sm">Terms of Service</a>
