--- a/index.html
+++ b/index.html
@@ -1168,6 +1168,27 @@
             });
         });
     </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+    <script>
+        (function () {
+            emailjs.init("Y_h1hhe5jBnHtKfpF"); // Your EmailJS Public Key
+        })();
+
+        document.getElementById('contact-form').addEventListener('submit', function (event) {
+            event.preventDefault();
+
+            emailjs.sendForm('service_ih7jwlu', 'template_vhh8mfy', this)
+                .then(function (response) {
+                    alert('Yuno: Mission accomplished, senpai 💌 Message sent to your Gmail!');
+                    document.getElementById('contact-form').reset();
+                }, function (error) {
+                    alert('Yuno: Error while sending 😭 ' + JSON.stringify(error));
+                });
+        });
+    </script>
+
+
 </body>
 
 </html>
