--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
             <div class="text-primary text-2xl font-['Pacifico']">
                 <span class="neon-text">Izumi</span>
             </div>
-            <div class="hidden md:flex space-x-8">
+            <div id="menu" class="hidden md:flex space-x-8">
                 <a href="#" class="text-white hover:text-primary transition-colors duration-300 glitch-hover">Home</a>
                 <a href="#projects"
                     class="text-white hover:text-primary transition-colors duration-300 glitch-hover">Projects</a>
@@ -405,7 +405,7 @@
                 <a href="#contact"
                     class="text-white hover:text-primary transition-colors duration-300 glitch-hover">Contact</a>
             </div>
-            <div class="md:hidden w-8 h-8 flex items-center justify-center text-white cursor-pointer">
+            <div id="menu-toggle" class="md:hidden w-8 h-8 flex items-center justify-center text-white cursor-pointer">
                 <i class="ri-menu-line text-xl"></i>
             </div>
         </nav>
@@ -942,7 +942,7 @@
             </div>
 
             <div class="mt-12 text-center">
-                <a href="#"
+                <a href="https://github.com/Izumitempest"
                     class="cyber-btn inline-block bg-transparent border border-primary text-primary hover:bg-primary hover:bg-opacity-10 px-8 py-3 text-lg font-medium !rounded-button whitespace-nowrap">
                     View All Projects
                 </a>
@@ -1043,12 +1043,12 @@
                             <div class="mb-4">
                                 <label for="name" class="block text-gray-400 mb-2">Name</label>
                                 <input type="text" id="name" name="from_name"
-                                    class="terminal-input w-full px-4 py-3 rounded border-none" placeholder="_">
+                                    class="terminal-input w-full px-4 py-3 rounded border-none" placeholder="_" autocomplete="name">
                             </div>
                             <div class="mb-4">
                                 <label for="email" class="block text-gray-400 mb-2">Email</label>
                                 <input type="email" id="email" name="from_email"
-                                    class="terminal-input w-full px-4 py-3 rounded border-none" placeholder="_">
+                                    class="terminal-input w-full px-4 py-3 rounded border-none" placeholder="_" autocomplete="email">
                             </div>
                             <div class="mb-4">
                                 <label for="subject" class="block text-gray-400 mb-2">Subject</label>
@@ -1189,6 +1189,11 @@
         });
     </script>
 
+    <script>
+        document.getElementById('menu-toggle').addEventListener('click', function(){
+            document.getElementById('menu').classList.toggle('hidden');
+        });
+    </script>
 
 </body>
 
